--- a/src/ui/styles/style.css
+++ b/src/ui/styles/style.css
@@ -890,7 +890,7 @@ td:last-child, th:last-child {
     border: 1px solid var(--color-7);
     border-radius: var(--large-border-radius);
     transition: height 100ms ease-in-out;
-    overflow: auto;
+    overflow: hidden;
     padding: calc(var(--base-padding) * 2);
     box-sizing: border-box;
 }
